added a back to top

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <title>COVID Thingy</title>
-    <
+    
 </head>
 <body>
     <br>
@@ -40,6 +40,7 @@
     </div>
 
     <br>
+    <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button" style="position: fixed; bottom: 0;right: 0; color: white; background-color: blue;"><i class="fas fa-arrow-circle-up"></i></a>   
 
    <div class="container-fluid" style="text-align: center; padding: 0;">
     <div class="table-responsive">          
